--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install:
   - pip install 'pylint>=1.6.1'
   - pip install -U .
 script:
-  - pylint --errors-only --disable=print-statement,catching-non-exception mediachain && python setup.py test
+  - python setup.py test
 notifications:
   slack: mediachain:gzFe4w4HwIlNnxaHy1vAKW3q
   on_success: change
